csrc/tests/codegen_probes/errors/err_continue_out_of_loop.bas
' REJECT: CONTINUE DO with no enclosing loop.
' zxbparser p_continue:1975 "Syntax Error: CONTINUE DO out of loop".
Continue Do
